--- a/Templates/dashboard-export.html
+++ b/Templates/dashboard-export.html
@@ -35,63 +35,67 @@
         </nav>
     </div>
     <div class="container" style="margin-bottom: 150px;">
-
+<form action="{% url 'dashboard_export_func' %}" method="GET">
+    {% csrf_token %}
         <div style="border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding: 30px 30px 25px;margin-top: 15px;margin-bottom: 0px;">
             <div class="text-center"><a class="btn btn-secondary" data-bs-toggle="collapse" aria-expanded="true" aria-controls="collapse-2" href="#collapse-2" role="button" style="margin-bottom: 10px;width: 80%;font-size: 18px;"><i class="fa fa-filter"></i>&nbsp;Filters</a>
                 <div class="collapse show" id="collapse-2">
-                    <form>
                         <div class="row d-flex justify-content-center" style="margin-top: 10px;">
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="Residents Name" placeholder="Residents" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
                             <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
-                                <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Date</button>
+                                {{ filter_selection|resident_search_field }}
+                            </div>
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;">
+                                <div class="dropdown">
+                                    <button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Date</button>
                                     <div class="dropdown-menu">
-                                        <p style="margin-left: 15px;margin-right: 15px;margin-bottom: 0px;">From:</p><input class="form-control" type="date" style="margin-left: 10px;margin-right: 10px;width: 90%;">
-                                        <p style="margin-left: 15px;margin-right: 15px;margin-bottom: 0px;">To:</p><input class="form-control" type="date" style="margin-left: 10px;margin-right: 10px;width: 90%;">
+                                        <p style="margin-left: 15px;margin-right: 15px;margin-bottom: 0px;">From:</p>
+                                        {{ filter_selection|date_to_input }}
+                                        <p style="margin-left: 15px;margin-right: 15px;margin-bottom: 0px;">To:</p>
+                                        {{ filter_selection|date_from_input }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="Residents Name" placeholder="Reporter" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;">
+                                {{ filter_selection|reporter_search_field }}
+                            </div>
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Location</button>
                                     <div class="dropdown-menu">
-                                        {{ reports|location_options }}
+                                        {{ reports|location_options:filter_selection }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Type of Care</button>
                                     <div class="dropdown-menu">
-                                        {{ reports|care_options }}
+                                        {{ reports|care_options:filter_selection }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Incident Type</button>
                                     <div class="dropdown-menu">
-                                        {{ reports|incident_options }}
+                                        {{ reports|incident_options:filter_selection }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Report Status</button>
                                     <div class="dropdown-menu">
-                                        <div class="form-check" style="margin-left: 10px;"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">John Smith</label></div>
+                                        {{ reports|report_status:filter_selection }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;">
                                 <div class="d-flex justify-content-center" style="width: 100%;padding: 6px 12px;height: 100%;border-width: 2px;border-style: solid;border-radius: 4px;">
-                                    <div class="form-check" style="text-align: left;"><input class="form-check-input" type="checkbox" id="formCheck-3" style="border: 2px solid rgb(0, 0, 0);padding: 7px;"><label class="form-check-label" for="formCheck-3" style="font-size: 18px;">Display All</label></div>
+                                        {{ filter_selection|display_all_toggle }}
                                 </div>
                             </div>
-                            <div class="col-12" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 15px;padding-bottom: 0px;"><a class="btn btn-secondary" role="button" style="width: 50% ;">Apply</a></div>
+                            <div class="col-12" style="padding: 15px 10px 0px;"><button class="btn btn-secondary" role="button" type="submit" name="submit" value="apply_filters" style="width: 50% ;">Apply</button></div>
                         </div>
-                    </form>
                 </div>
             </div>
         </div>
-    <form action="{% url 'export' %}" method="GET">
-    {% csrf_token %}
         <div style="border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding: 30px 30px 25px;margin-top: 15px;margin-bottom: 0px;">
             <div class="row d-flex justify-content-center">
                 <div class="col-12 text-center" style="margin-bottom: 20px;"><a class="btn btn-secondary" role="button"  href="{% url 'dashboard' %}" style="width: 80%;">&nbsp;<i class="fa fa-list-ul" style="font-size: 20px;"></i>&nbsp;Deselect</a></div>
